security: update Next.js to patch CVE-2025-66478

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^17.2.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
     "openai": "^5.23.2",
     "react": "19.1.0",
